@@ -13,6 +13,7 @@
   * Added information about configure options to INSTALL.
   * Added miaurc option "qlog_no_my_quit" to suppress user's own QUIT messages
     when replaying quicklog.
+  * Updated documentation about possible caveat with chandiscon.
 
 
 0.6.4 - "What protocol?"
